@@ -99,12 +99,20 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+				<version>3.11.0</version>
                 <configuration>
                     <source>17</source>
                     <target>17</target>
 					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
             </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>--enable-preview</argLine>
+				</configuration>
+			</plugin>
         </plugins>
 	</build>
 
